compiler/tests/compiler/must_fail/t_25.rs.exp.err
tests/compiler/must_fail/t_25.mil:3:16: 3:17 error: <-- variable declared here
extern fn test(x : reg bool) -> reg u64 {
               ^^
tests/compiler/must_fail/t_25.mil:3:33: 3:39 error: <-- return type declared here
extern fn test(x : reg bool) -> reg u64 {
                                ^^^^^^^
tests/compiler/must_fail/t_25.mil:4:10: 4:11 error: return type for x wrong
  return x;
         ^^
